tests/snapshots/markdown_tests__test__ignores_identifiers_that_do_not_end.snap
---
source: tests/markdown_tests.rs
description: ignores_identifiers_that_do_not_end
info: "Look at this :stop"
---
ParsedMarkdown {
    html: "<p>Look at this :stop</p>\n",
    headings: [],
    links: [],
    blocks: {},
}
