tests/snapshots/markdown_tests__test__leaves_the_emoji_identifier_alone_if_it_is_not_recognised.snap
---
source: tests/markdown_tests.rs
description: leaves_the_emoji_identifier_alone_if_it_is_not_recognised
info: "Look at this :idonotexist:"
---
ParsedMarkdown {
    html: "<p>Look at this :idonotexist:</p>\n",
    headings: [],
    links: [],
}
