tests/snapshots/markdown_tests__test__sanitizes_input.snap
---
source: tests/markdown_tests.rs
description: sanitizes_input
info: "<script>\nalert('I break you');\n</script>"
---
Markdown {
    as_html: "",
    headings: [],
    links: [],
}
