tests/snapshots/markdown_tests__test__supports_content_around_tabgroups.snap
---
source: tests/markdown_tests.rs
description: supports_content_around_tabgroups
info: "content before\n\n# [_Tab1_](#/tab/id1/condition1)\nFoo\n# [Tab2](#/tab/id2)\nBar\n\n---\n\ncontent after"
---
ParsedMarkdown {
    html: "<p>content before</p>\n<div class=\"tabgroup\"><ul class=\"tab-list\" role=\"tablist\"><li class= role=\"presentation\"><label class=\"active\" id=\"id1\" title=\"Tab1\" role=\"tab\">Tab1</label></li><li class= role=\"presentation\"><label class=\"\" id=\"id2\" title=\"Tab2\" role=\"tab\">Tab2</label></li></ul><div class=\"tab-panel active\" data-tab-id=\"id1\">\n<p>Foo</p>\n</div><div class=\"tab-panel \" data-tab-id=\"id2\">\n<p>Bar</p>\n</div></div>\n<p>content after</p>\n",
    preview: "content before",
    headings: [],
    links: [],
    blocks: {},
}
